@@ -1,3 +1,8 @@
+MTA utils (1.4-1)
+  * Make build create architecture dependent package
+  * Remove false dependency to libssl1.1, only libssl3 should be used
+  -- Gavriel Karasin <gavrielk@mta.ac.il>  Mon, 2 Jun 2025 22:57:00 +0300
+
 MTA utils (1.3-1)
 
   * Fix key buffer overrun by using additional call to EVP_EncryptInit_ex to set the key
